--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node-cron": "^3.0.3"
   },
   "optionalDependencies": {
-    "node-windows": "1.0.0-beta.8",
-    "node-linux": "0.1.12"
+    "node-linux": "0.1.7",
+    "node-windows": "1.0.0-beta.8"
   }
 }
