--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   },
   "optionalDependencies": {
     "node-linux": "0.1.7",
-    "node-windows": "1.0.0-beta.8"
+    "node-windows": "^1.0.0-beta.8"
   }
 }
