--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && copy src\\config.json dist\\config.json",
+    "build": "tsc && shx cp src/config.json dist/config.json",
     "dev": "nodemon --watch src/**/*.ts --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "node OSdep.js"
@@ -16,6 +16,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.4",
+    "shx": "^0.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
